[package]
authors = ["Zeyla Hellyer <zeyla@hellyer.dev>"]
categories = []
description = "Resource-based interface for the `twilight-http` crate."
documentation = "https://docs.rs/twilight-http-resource"
edition = "2018"
homepage = "https://github.com/zeylahellyer/twilight-http-resource"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["twilight"]
license = "ISC"
name = "twilight-http-resource"
publish = false
readme = "README.md"
repository = "https://github.com/zeylahellyer/twilight-http-resource"
version = "0.1.0"

[dependencies]
twilight-http = { default-features = false, version = "0.8" }
twilight-model = { default-features = false, version = "0.8" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.0" }
twilight-http = { default-features = false, features = ["rustls"], version = "0.8" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
